# tree-model-demo

./: README.md  db.sqlite3  pyproject.toml
filesystem/: admin.py  forms.py  models.py
filesystem/migrations/: 0001_initial.py
useraccount/: admin.py  forms.py  manager.py  models.py
useraccount/migrations/: 0001_initial.py
webconfig/: settings.py  urls.py
website/: shortcuts.py  views.py
website/static/: style.css
webtemplates/generic/: form.html  redirect.html
webtemplates/view/: base.html  form.html  home.html
